# drake

examples/pendulum/: trajectory_optimization_simulation.cc
examples/quad_tilt_wing/: BUILD.bazel  CenterElevator.STL  CenterWing.STL  Fuselage.STL  LeftElevator.STL  LeftWing.STL  RightElevator.STL  RightWing.STL  quad_tilt_wing.urdf  quad_tilt_wing.urdf.xacro  quad_tilt_wing_fixed.urdf  quad_tilt_wing_fixed.urdf.xacro  quad_tilt_wing_plant.cc  quad_tilt_wing_plant.h  quad_tilt_wing_rviz.urdf  quad_tilt_wing_rviz.urdf.xacro  run_quad_tilt_wing_arbitrary_controller.cc  run_quad_tilt_wing_arbitrary_controller_test.cc  run_quad_tilt_wing_dynamics.cc  run_quad_tilt_wing_fixed_point.cc  run_quad_tilt_wing_fixed_point_knife_edge.cc  run_quad_tilt_wing_lqr.cc  run_quad_tilt_wing_lqr_80.cc  run_quad_tilt_wing_lqr_trim_point.cc  run_quad_tilt_wing_lqr_upright.cc  run_quad_tilt_wing_lqr_wing_tilt.cc  run_quad_tilt_wing_traj_opt.cc  run_quad_tilt_wing_traj_opt_simple.cc  run_quad_tilt_wing_traj_opt_snopt.cc  run_quad_tilt_wing_traj_opt_snopt_0mps_100mps.cc  run_quad_tilt_wing_traj_opt_snopt_0mps_10mps.cc  run_quad_tilt_wing_traj_opt_snopt_0mps_50mps.cc  run_quad_tilt_wing_traj_opt_snopt_100mps_0mps.cc  run_quad_tilt_wing_traj_opt_snopt_10mps_50mps.cc  run_quad_tilt_wing_traj_opt_snopt_pitch_up_deaccelerate.cc  run_quad_tilt_wing_traj_opt_snopt_reverse.cc  run_quad_tilt_wing_traj_opt_snopt_roll.cc  run_quad_tilt_wing_traj_opt_snopt_turn.cc  run_quad_tilt_wing_traj_opt_snopt_turn_10mps.cc  run_quad_tilt_wing_traj_opt_snopt_turn_10mps_circle.cc  (+2 more)
examples/quadrotor/: CMakeCache.txt  run_quadrotor_dynamics.cc
systems/controllers/: BUILD.bazel  linear_quadratic_regulator.cc  linear_quadratic_regulator.h
systems/primitives/: time_varying_data.cc
