# -*- python -*-

load(
    "//tools:drake.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_binary",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

drake_cc_library(
    name = "quad_tilt_wing_plant",
    srcs = ["quad_tilt_wing_plant.cc"],
    hdrs = ["quad_tilt_wing_plant.h"],
    deps = [
        "//common:default_scalars",
        "//math:geometric_transform",
        "//math:gradient",
        "//systems/controllers:linear_quadratic_regulator",
        "//systems/framework:leaf_system",
        "//systems/primitives:affine_system",
        "//util",
    ],
)

drake_cc_binary(
    name = "run_quad_tilt_wing_dynamics",
    srcs = ["run_quad_tilt_wing_dynamics.cc"],
    add_test_rule = 1,
    data = [":models"],
    test_rule_args = [
        "--duration=0.1",
        "--initial_height=0.51",
    ],
    test_rule_size = "medium",
    deps = [
        ":quad_tilt_wing_plant",
        "//common:find_resource",
        "//lcm",
        "//multibody:rigid_body_tree",
        "//multibody:rigid_body_tree_construction",
        "//multibody/parsers",
        "//multibody/rigid_body_plant",
        "//multibody/rigid_body_plant:drake_visualizer",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "@gflags",
    ],
)

install_data()
add_lint_tests()
