# -*- python -*-

load(
    "//tools:drake.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_binary",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

drake_cc_library(
    name = "quad_tilt_wing_plant",
    srcs = ["quad_tilt_wing_plant.cc"],
    hdrs = ["quad_tilt_wing_plant.h"],
    deps = [
        "//common:default_scalars",
        "//math:geometric_transform",
        "//math:gradient",
        "//systems/controllers:linear_quadratic_regulator",
        "//systems/framework:leaf_system",
        "//systems/primitives:affine_system",
        "//util",
    ],
)

drake_cc_binary(
    name = "run_quad_tilt_wing_dynamics",
    srcs = ["run_quad_tilt_wing_dynamics.cc"],
    add_test_rule = 1,
    data = [":models"],
    test_rule_args = [
        "--duration=1.0",
        "--initial_height=0.51",
        "--realtime_rate=0.1",
    ],
    test_rule_size = "medium",
    deps = [
        ":quad_tilt_wing_plant",
        "//common:find_resource",
        "//lcm",
        "//multibody:rigid_body_tree",
        "//multibody:rigid_body_tree_construction",
        "//multibody/parsers",
        "//multibody/rigid_body_plant",
        "//multibody/rigid_body_plant:drake_visualizer",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_quad_tilt_wing_arbitrary_controller_test",
    srcs = ["run_quad_tilt_wing_arbitrary_controller_test.cc"],
    add_test_rule = 1,
    data = [":models"],
    test_rule_args = [
        "--simulation_trials=1",
        "--simulation_real_time_rate=0.1",
        "--trial_duration=1.0",
    ],
    test_rule_size = "medium",
    deps = [
        ":quad_tilt_wing_plant",
        "//common:find_resource",
        "//lcm",
        "//multibody:rigid_body_tree",
        "//multibody:rigid_body_tree_construction",
        "//multibody/parsers",
        "//multibody/rigid_body_plant",
        "//multibody/rigid_body_plant:drake_visualizer",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:demultiplexer",
        "//systems/primitives:multiplexer",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_quad_tilt_wing_lqr",
    srcs = ["run_quad_tilt_wing_lqr.cc"],
    add_test_rule = 1,
    data = [":models"],
    test_rule_args = [
        "--simulation_trials=1",
        "--simulation_real_time_rate=0.1",
        "--trial_duration=1.0",
    ],
    test_rule_size = "medium",
    deps = [
        ":quad_tilt_wing_plant",
        "//common:find_resource",
        "//lcm",
        "//multibody:rigid_body_tree",
        "//multibody:rigid_body_tree_construction",
        "//multibody/parsers",
        "//multibody/rigid_body_plant",
        "//multibody/rigid_body_plant:drake_visualizer",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:demultiplexer",
        "//systems/primitives:multiplexer",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_quad_tilt_wing_lqr_upright",
    srcs = ["run_quad_tilt_wing_lqr_upright.cc"],
    add_test_rule = 1,
    data = [":models"],
    test_rule_args = [
        "--simulation_trials=1",
        "--simulation_real_time_rate=0.1",
        "--trial_duration=1.0",
    ],
    test_rule_size = "medium",
    deps = [
        ":quad_tilt_wing_plant",
        "//common:find_resource",
        "//lcm",
        "//multibody:rigid_body_tree",
        "//multibody:rigid_body_tree_construction",
        "//multibody/parsers",
        "//multibody/rigid_body_plant",
        "//multibody/rigid_body_plant:drake_visualizer",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:demultiplexer",
        "//systems/primitives:multiplexer",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_quad_tilt_wing_lqr_wing_tilt",
    srcs = ["run_quad_tilt_wing_lqr_wing_tilt.cc"],
    add_test_rule = 1,
    data = [":models"],
    test_rule_args = [
        "--simulation_trials=1",
        "--simulation_real_time_rate=0.1",
        "--trial_duration=1.0",
    ],
    test_rule_size = "medium",
    deps = [
        ":quad_tilt_wing_plant",
        "//common:find_resource",
        "//lcm",
        "//multibody:rigid_body_tree",
        "//multibody:rigid_body_tree_construction",
        "//multibody/parsers",
        "//multibody/rigid_body_plant",
        "//multibody/rigid_body_plant:drake_visualizer",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:demultiplexer",
        "//systems/primitives:multiplexer",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_quad_tilt_wing_lqr_trim_point",
    srcs = ["run_quad_tilt_wing_lqr_trim_point.cc"],
    add_test_rule = 1,
    data = [":models"],
    test_rule_args = [
        "--simulation_trials=1",
        "--simulation_real_time_rate=0.1",
        "--trial_duration=1.0",
    ],
    test_rule_size = "medium",
    deps = [
        ":quad_tilt_wing_plant",
        "//common:find_resource",
        "//lcm",
        "//multibody:rigid_body_tree",
        "//multibody:rigid_body_tree_construction",
        "//multibody/parsers",
        "//multibody/rigid_body_plant",
        "//multibody/rigid_body_plant:drake_visualizer",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:demultiplexer",
        "//systems/primitives:multiplexer",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_quad_tilt_wing_traj_opt",
    srcs = ["run_quad_tilt_wing_traj_opt.cc"],
    add_test_rule = 1,
    data = [":models"],
    test_rule_args = [
        "--target_realtime_rate=1",
    ],
    test_rule_size = "medium",
    deps = [
        ":quad_tilt_wing_plant",
        "//common:find_resource",
        "//lcm",
        "//multibody:rigid_body_tree",
        "//multibody:rigid_body_tree_construction",
        "//multibody/parsers",
        "//multibody/rigid_body_plant",
        "//multibody/rigid_body_plant:drake_visualizer",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:demultiplexer",
        "//systems/primitives:multiplexer",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:direct_collocation",
        "//systems/trajectory_optimization:direct_transcription",
        "//solvers:ipopt_solver",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_quad_tilt_wing_traj_opt_simple",
    srcs = ["run_quad_tilt_wing_traj_opt_simple.cc"],
    add_test_rule = 1,
    data = [":models"],
    test_rule_args = [
        "--target_realtime_rate=1",
    ],
    test_rule_size = "medium",
    deps = [
        ":quad_tilt_wing_plant",
        "//common:find_resource",
        "//lcm",
        "//multibody:rigid_body_tree",
        "//multibody:rigid_body_tree_construction",
        "//multibody/parsers",
        "//multibody/rigid_body_plant",
        "//multibody/rigid_body_plant:drake_visualizer",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:demultiplexer",
        "//systems/primitives:multiplexer",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:direct_collocation",
        "//systems/trajectory_optimization:direct_transcription",
        "//solvers:ipopt_solver",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_quad_tilt_wing_fixed_point",
    srcs = ["run_quad_tilt_wing_fixed_point.cc"],
    add_test_rule = 1,
    data = [":models"],
    test_rule_args = [
        "--target_realtime_rate=1",
    ],
    test_rule_size = "medium",
    deps = [
        ":quad_tilt_wing_plant",
        "//common:find_resource",
        "//lcm",
        "//multibody:rigid_body_tree",
        "//multibody:rigid_body_tree_construction",
        "//multibody/parsers",
        "//multibody/rigid_body_plant",
        "//multibody/rigid_body_plant:drake_visualizer",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:demultiplexer",
        "//systems/primitives:multiplexer",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:direct_collocation",
        "//systems/trajectory_optimization:direct_transcription",
        "//solvers:ipopt_solver",
        "@gflags",
    ],
)

drake_cc_binary(
    name = "run_quad_tilt_wing_traj_opt_tvlqr",
    srcs = ["run_quad_tilt_wing_traj_opt_tvlqr.cc"],
    add_test_rule = 1,
    data = [":models"],
    test_rule_args = [
        "--target_realtime_rate=1",
    ],
    test_rule_size = "medium",
    deps = [
        ":quad_tilt_wing_plant",
        "//common:find_resource",
        "//lcm",
        "//multibody:rigid_body_tree",
        "//multibody:rigid_body_tree_construction",
        "//multibody/parsers",
        "//multibody/rigid_body_plant",
        "//multibody/rigid_body_plant:drake_visualizer",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:demultiplexer",
        "//systems/primitives:multiplexer",
        "//systems/primitives:trajectory_source",
        "//systems/trajectory_optimization:direct_collocation",
        "//systems/trajectory_optimization:direct_transcription",
        "//solvers:ipopt_solver",
        "//systems/primitives:linear_system",
        "//systems/primitives:time_varying_data",
        "//systems/primitives:piecewise_polynomial_affine_system",
        "//common/trajectories:piecewise_polynomial",
        "@gflags",
    ],
)


install_data()
add_lint_tests()
